// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> flat story renders snapshot 1`] = `
<button
  class="button sizeMedium variantFlat colorSuccess"
  type="button"
>
  ​
  Flat Button
</button>
`;

exports[`<Button /> link story renders snapshot 1`] = `
<button
  class="button variantLink colorAlert"
  type="button"
>
  ​
  Link Button
</button>
`;

exports[`<Button /> linkInBody story renders snapshot 1`] = `
<p
  class="typography sizeBody colorBase"
>
  This text surrounds the 
  <button
    class="button variantLink colorBrand"
    type="button"
  >
    ​
    Link Button
  </button>
   and shows that the link should adhere to its appearance
</p>
`;

exports[`<Button /> linkInHeading story renders snapshot 1`] = `
<p
  class="typography sizeH1 colorBase"
>
  This text surrounds the 
  <button
    class="button variantLink colorBrand"
    type="button"
  >
    ​
    Link Button
  </button>
   and shows that the link should adhere to its appearance
</p>
`;

exports[`<Button /> outline story renders snapshot 1`] = `
<button
  class="button sizeMedium variantOutline colorBrand"
  type="button"
>
  ​
  Outline Button
</button>
`;
